fix hard to see uni icons and switch to flexbox for mines

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -368,6 +368,17 @@
       }
     }
   }
+
+  &-farms {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  &-farm {
+    flex: 1 1 30%; /*grow | shrink | basis */
+    margin: 1%;
+  }
 }
 
 .table-container {
